# tft

./: .gitignore  Cargo.toml  pyproject.toml  run.py  run_full.py  tft_rust.pyi
py-tft/: pyproject.toml
py-tft/tft/: __init__.py  team.py
src/: champions.rs  lib.rs  main.rs  solution.rs  solution_iterator.rs  team.rs  traits.rs
tft/: champions.py  team.py  traits.py
tft/tft/: __init__.py  champions.py  solution.py  solution_iterator.py  team.py  traits.py
tft_rust/: __init__.py  champions.pyi  solution.pyi  solution_iterator.pyi  team.pyi  traits.pyi
