[package]
name = "tft_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tft_rust"
crate-type = ["cdylib"]


[dependencies]
crossbeam-channel = "0.5.13"
itertools = "0.13.0"
pyo3 = "0.22.3"
# pyo3 = { version = "0.21.1", features = ["experimental-async"] }
# pyo3-asyncio-0-21 = { version = "0.21.0", features = ["tokio-runtime", "async-std"] }
rayon = "1.10.0"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
